--- a/development.ini
+++ b/development.ini
@@ -39,6 +39,7 @@ sqlalchemy.url = sqlite:///%(here)s/development.db
 #set debug = false
 
 texcore.adhoc = true
+texcore.texmf = %(here)s/../corps/texmf
 
 # Logging configuration
 [loggers]
