--- a/development.ini
+++ b/development.ini
@@ -40,6 +40,7 @@ sqlalchemy.url = sqlite:///%(here)s/development.db
 
 texcore.adhoc = true
 texcore.texmf = %(here)s/../corps/texmf
+texcore.ptex = /usr/local/teTeX
 texcore.ptex.encoding = UTF-8
 
 # Logging configuration
